[package]
name = "xpath_reader"
version = "0.2.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "Apache-2.0"
description = "Provides a convenient API to read from XML using XPath queries."
repository = "https://github.com/leoschwarz/xpath-reader"
documentation = "https://docs.rs/xpath_reader/"
keywords = ["xpath","xml"]

[features]
default = []

[dependencies]
error-chain = "0.10.0"
sxd-document = "0.2.1"
sxd-xpath = "0.4.0"

