[package]
name = "xpath_reader"
version = "0.5.1"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "Apache-2.0"
description = "Provides a convenient API to read from XML using XPath expressions."
repository = "https://github.com/leoschwarz/xpath_reader"
documentation = "https://docs.rs/xpath_reader/"
keywords = ["xpath","xml"]
readme = "README.md"

[features]
default = []

[dependencies]
sxd-document = "0.3"
sxd-xpath = "0.4"

